--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "mmt",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://monumentalconservation.github.io/new-site", 
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
@@ -11,6 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
