--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mmt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://monumentalconservation.github.io/new-site", 
+  "homepage": "https://monumentalconservation.github.io/new-site",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
